merge van branches/pdfprint
git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWOProject/DWOJClient/trunk@15010 58dd2db4-0f11-0410-9df4-da15f00f50bd